k8s-rewrite/charts/media-stack/bazarr/ingress.yaml
# Bazarr Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr-ingress
  namespace: plex
spec:
  rules:
  - host: bazarr.branconet.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port:
              number: 6767
